FIX: fix navbar being long on smaller screens

--- a/donutello/src/style.css
+++ b/donutello/src/style.css
@@ -47,6 +47,11 @@ body {
   padding: 10px;
   border-radius: 15px;
 }
+@media screen and (max-width: 1024px) {
+  .navbar {
+    width: 30%;
+  }
+}
 
 .navbar a {
   margin: 10px;
